!Emergency fix for homepage issues

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles/menu.css">
     </head>
     <body>
-        <button id="menu-toggle" aria-label="Toggle menu">/button>
+        <button id="menu-toggle" aria-label="Toggle menu">☰</button>
         <div id="menu"></div>
         <iframe name="docFrame" id="docFrame"></iframe>
 
