Add initial page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <button id="menu-toggle" aria-label="Toggle menu">☰</button>
         <div id="menu"></div>
-        <iframe name="docFrame" id="docFrame"></iframe>
+        <iframe name="docFrame" id="docFrame" src="initial-page.html"></iframe>
 
         <script type="module" src="utils/docs-index.js"></script>
         <script src="utils/menu-collapse.js"></script>
