修改index标题；添加描述

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh">
     <head>
         <meta charset="UTF-8">
-        <title>Docs Index</title>
+        <title>Minecraft Addons 文档</title>
+        <meta name="description" content="本文档由 幻想边境社团 翻译（可加入翻译组）。部分翻译取自 bedrock.dev。">
         <link rel="icon" type="image/jpg" href="img/Map.png" />
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="stylesheet" href="styles/menu.css">
