更新自述文件和主页

--- a/initial-page.html
+++ b/initial-page.html
@@ -113,6 +113,13 @@
                 background: transparent;
                 padding: 0;
             }
+
+            blockquote {
+            border-left: 4px solid #dfe2e5;
+            padding-left: 1em;
+            margin-left: 0;
+            color: #6a737d;
+        }
             @media (max-width: 1000px) {
                 body {
                     flex-direction: column;
@@ -164,17 +171,32 @@
     <body>
         <div class="content">
             <div class="welcome-message">Minecraft Addons 文档</div>
-            <h2>贡献者</h2>
-            <p>此文档由 <a href="https://github.com/GensouEdge" target="_blank">幻想边境社团</a> 翻译（可加入翻译组）。</p>
-            <p>部分翻译取自 <a href="https://bedrock.dev/zh" target="_blank">bedrock.dev</a>。</p>
+            <p>Minecraft基岩版文档中文翻译，文档来源：<a href="https://github.com/Mojang/bedrock-samples">Mojang/bedrock-samples</a>、<a
+                    href="https://github.com/bedrock-dot-dev/docs">bedrock-dot-dev/docs</a></p>
+            <p>标准化译名参考<a
+                    href="https://wiki.mcbe-dev.net/p/Minecraft%E5%9F%BA%E5%B2%A9%E7%89%88%E5%BC%80%E5%8F%91Wiki:%E8%AF%91%E5%90%8D%E6%A0%87%E5%87%86%E5%8C%96">基岩版开发Wiki:译名标准化</a>
+            </p>
+            <p>部分翻译取自<a href="https://bedrock.dev/zh">bedrock.dev</a></p>
 
-            <h2>许可证</h2>
-            <p class="license">本文档遵循 <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.zh" target="_blank">CC-BY-NC</a> 协议。<img src="img/by-nc.eu.png" alt="跳转图片" style="width:8%; position: relative; top: 5px"></p>
+            <h2>贡献</h2>
             <ul>
-                <li>您可以复制、发行、展览、表演、放映、广播或通过信息网络传播本作品；</li>
-                <li>您必须按照作者或者许可人指定的方式对作品进行署名；</li>
-                <li>您不得为商业目的而使用本作品。</li>
+                <li>此文档由<a href="https://github.com/GensouEdge">幻想边境社团</a>翻译(可加入翻译组)</li>
             </ul>
+
+            <h3>贡献者</h3>
+            <ul>
+                <li>特别鸣谢本项目所有<a href="https://github.com/GensouEdge/minecraft_be_doc_cn/graphs/contributors">贡献者</a></li>
+            </ul>
+            <h2>许可证</h2>
+                <p>版权所有 © 2025 幻想边境</p>
+            <hr>
+            <p class="license">站点部分代码遵循 <a href="LICENSE">AGPLv3</a> 协议</p>
+            <p class="license">本文档遵循 <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.zh" target="_blank">CC-BY-NC</a> 协议。<img src="img/by-nc.eu.png" alt="跳转图片" style="width:8%; position: relative; top: 5px"></p>
+                <blockquote>
+                    <p>您可以复制、发行、展览、表演、放映、广播或通过信息网络传播本作品；<br>
+                        您必须按照作者或者许可人指定的方式对作品进行署名；<br>
+                        您不得为商业目的而使用本作品。</p>
+                </blockquote>
 
             <h2>建议</h2>
             <p>本文档适合配合 <a href="https://zh.minecraft.wiki/" target="_blank">MinecraftWiki</a> 和 <a href="https://learn.microsoft.com/en-us/minecraft/creator/reference/content/entityreference/examples/componentlist?view=minecraft-bedrock-stable" target="_blank">learn.microsoft.com</a> 进行查阅。</p>
