给仓库地址加上了p标签，现在在移动端大小正常了

--- a/initial-page.html
+++ b/initial-page.html
@@ -179,7 +179,7 @@
             <p>部分翻译取自<a href="https://bedrock.dev/zh">bedrock.dev</a></p>
 
             <h2>贡献</h2>
-            <a href="https://github.com/GensouEdge/minecraft_be_doc_cn" target="_blank">仓库地址</a>
+            <p><a href="https://github.com/GensouEdge/minecraft_be_doc_cn" target="_blank">仓库地址</a></p>
             <ul>
                 <li>此文档由<a href="https://github.com/GensouEdge" target="_blank">幻想边境社团</a>翻译(可加入翻译组)</li>
             </ul>
